# CheesyPic

./: .gitignore  CMakeLists.txt  CP707DWS.printer  README.md  camera_fps_test.c  capture_thread.c  capture_thread.h  cheesypic.service  decode_thread.c  decode_thread.h  design.c  design.h  glad.c  glib.supp  jpeg_fps_test.c  lodepng.h  logic.c  logic.h  main.c  parse_svg.c  parse_svg.h  photobooth_button.dts  printer.c  printer.h  printer_thread.c  printer_thread.h  render_jpg.c  render_thread.c  render_thread.h  shared_memory.h  svg_to_png.c
addons/: ups_script_ina219.py
app/: CMakeLists.txt
app/include/: config.h  decode_thread.h  design.h  lodepng.h  logic.h  printer.h  shared_memory.h  theme.h
app/src/: capture_thread.c  config.c  config.c.noc  decode_thread.c  design.c  lodepng.c  logic.c  main.c  printer.c  render_thread.c  theme.c
cmake/modules/: FindB64.cmake  FindGDK-PixBuf.cmake  FindGlib.cmake  FindGphoto2.cmake  FindLibRSVG.cmake  FindTurboJPEG.cmake
configuration/: cheesypic.conf
docs/: CMakeLists.txt  CONFIGURATION.md  DESIGN.md  DoxygenLayout.xml  INSTALLATION.md  README.md
glad_bak/: glad.h
include/: capture_thread.h  config.h  design.h  logic.h  render_thread.h  shared_memory.h  theme.h
lib/cp_design/: CMakeLists.txt
lib/cp_design/include/: design.h
lib/cp_design/src/: design.c  example.c
lib/cp_theme/: CMakeLists.txt
lib/cp_theme/include/: theme.h
lib/cp_theme/src/: example.c  theme.c
lib/design/: CMakeLists.txt
lib/design/include/: design.h
lib/design/src/: design.c  example.c
lib/theme/: CMakeLists.txt
lib/theme/src/: example.c  theme.c
scripts/: cheesypic_pi4b_battery_monitor.py
src/: capture_thread.c  config.c  decode_thread.c  design.c  logic.c  main.c  render_jpg.c  render_theme.c  render_thread.c  theme.c  triangles.c
